MAIN.CSS IS CREATED

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </title>
 </head>
 <body>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus laudantium, ab numquam iusto totam atque. Ipsam reiciendis eligendi perferendis corrupti quod quidem. Dolor nostrum, magnam ut nulla voluptates numquam a!</p>
     
 </body>
 </html>
